--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0"
-    <title> The Greatest Weather App Ever</title>
+    <title>The Greatest Weather App Ever</title>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js"></script>
 </head>
+
 <body>
     <div class = "card">   
         <div class = "search">
@@ -17,6 +20,14 @@
                 </svg>
             </button>
         </div>
+        <div class="weather"></div>
+            <h2 class="city">Weather in Denver</h2>
+            <div class="temp">51°C</div>
+            <img src="" alt="" class="icon" />
+            <div class="description">Cloudy</div>
+            <div class="humidity">Humidity: 60%</div>
+            <div class="wind">Wind speed: 6.2 km/h</div>
+
     </div>
 </body>
 </html>
