--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -23,8 +23,9 @@
             </button>
         </div>
         <div class="weather"></div>
+            <h2>The Greatest Weather App Ever</h2>
             <h2 class="city">Weather in Denver</h2>
-            <div class="temp">51°C</div>
+            <h2 class="temp">51°C</h2>
             <img src="" alt="" class="icon" />
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 60%</div>
