--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -23,7 +23,7 @@
         <div class="weather"></div>
             <h2>The Greatest Weather App Ever</h2>
             <h2 class="city">Weather in Denver</h2>
-            <h2 id="temp">51°C</h2>
+            <h2 id="temp">51°F</h2>
             <img src="" alt="" class="icon" />
             <div class="description">Cloudy</div>
             <div class="humidity">Humidity: 60%</div>
