--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -23,11 +23,11 @@
         <div class="weather"></div>
             <h2>The Greatest Weather App Ever</h2>
             <h2 class="city"></h2>
-            <h2 id="temp">51°F</h2>
+            <h2 class="temp">51°F</h2>
             <img src="" alt="" class="icon" />
             <div class="description"></div>
-            <div class="humidity">Humidity: 60%</div>
-            <div class="wind">Wind speed: 6.2 km/h</div>
+            <div class="humidity"></div>
+            <div class="wind"></div>
     </div>
 </body>
 </html>
