--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -23,7 +23,7 @@
         <div class="weather"></div>
             <h2>The Greatest Weather App Ever</h2>
             <h2 class="city"></h2>
-            <h2 class="temp">51°F</h2>
+            <h2 class="temp"></h2>
             <div class="flex">
                 <img src="" alt="" class="icon" />
                 <div class="description"></div>
