--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -21,7 +21,7 @@
             </button>
         </div>
         <div class="weather"></div>
-            <h2>The Greatest Weather App Ever</h2>
+            <h2>Weatherama</h2>
             <h2 class="city"></h2>
             <h2 class="temp"></h2>
             <div class="flex">
